# micros

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  build_issue.md  config.yml  documentation.md  feature_request.md  hardware_support.md  question.md
.github/workflows/: build.yml
arch/arm/cortex_m/: CMakeLists.txt  boot.c  kernel.c  linker.ld  scheduler.c  syscalls.c
boards/lm/lm3s6965evb/: CMakeLists.txt
boards/st/stm32vldiscovery/: CMakeLists.txt
cmake/: tools.cmake
cmake/toolchains/: arm-gnu-eabi.cmake  micros-toolchain.cmake  posix.cmake  riscv-gnu-elf.cmake
docs/: board_support.md  concurrency.md  driver_model.md  getting_started.md  glossary.md  porting_guide.md  roadmap.md
docs/blog/: 2025-09-18-welcome-to-micros.md
include/micros/: device.h  init.h  kernel.h  log.h
micros/: CMakeLists.txt
micros/kernel/: CMakeLists.txt  log.c
samples/hello_world/: CMakeLists.txt  main.c
samples/init_functions/: CMakeLists.txt  main.c
soc/st/stm32f100rbt6/: CMakeLists.txt  sections.ld  system.c
soc/ti/lm3s6965/: CMakeLists.txt  sections.ld  system.c
tools/: micros.py
